[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/Interface/Inventory/Inventory.gd" type="Script" id=1]

[node name="Inventory" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Titel" type="Panel" parent="."]
margin_right = 1366.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )

[node name="TitelLabel" type="Label" parent="Titel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -10.0
margin_right = 56.0
margin_bottom = 10.0
text = "Inventar (0/2)"
align = 1
valign = 1

[node name="ItemList" type="ItemList" parent="."]
margin_top = 26.0
margin_right = 1366.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AskButton" type="Button" parent="."]
margin_top = 724.0
margin_right = 1366.0
margin_bottom = 744.0
disabled = true
text = "Befragen"

[node name="DeleteButton" type="Button" parent="."]
margin_top = 748.0
margin_right = 1366.0
margin_bottom = 768.0
disabled = true
text = "LÃ¶schen"
